--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,7 +7,8 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </head>
 <body oncontextmenu="return false;">
-	<h2>M I N E S W E E P E R <span id="status"></span></h2>
+	<h2>M I N E S W E E P E R<br/>
+	<span id="status"><i>click any square to begin!</i></span></h2>
 	<h3 id="message">&nbsp;</h3>
 	<div id="board"></div>
 	<script src="/js/minesweeper.js"></script>
