--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -11,6 +11,7 @@
 	<span id="status"><i>click any square to begin!</i></span></h2>
 	<h3 id="message">&nbsp;</h3>
 	<div id="board"></div>
+	<div id="footer"><br/>The sourcecode can be found on <a href="https://github.com/oysteinjakobsen/minesweeper-webapp-clojure">GitHub</a></div>
 	<script src="/js/minesweeper.js"></script>
 </body>
 </html>
