Points now displayed

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,14 +4,14 @@
 <meta charset="ISO-8859-1">
 <title>Minesweeper</title>
 <link rel="stylesheet" type="text/css" href="/css/minesweeper.css" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script	src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </head>
 <body oncontextmenu="return false;">
-	<h2>M I N E S W E E P E R<br/>
-	<span id="status"><i>click any square to begin!</i></span></h2>
+	<h2>M I N E S W E E P E R</h2>
+	<h3><span id="status"><i>click any square to begin!</i></span></h3>
 	<h3 id="message">&nbsp;</h3>
 	<div id="board"></div>
-	<div id="footer"><br/>The sourcecode can be found on <a href="https://github.com/oysteinjakobsen/minesweeper-webapp-clojure">GitHub</a></div>
+	<div id="footer"><br />The sourcecode can be found on <a href="https://github.com/oysteinjakobsen/minesweeper-webapp-clojure">GitHub</a></div>
 	<script src="/js/minesweeper.js"></script>
 </body>
 </html>
