Minor code cleanups

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -31,7 +31,7 @@
 
 	<div id="hof-register-block">
 		<span>
-			<label for="nick">Your nick:
+			<label for="nick">Your nick:</label>
 			<input name="nick" id="nick" type="text" />
 		</span>
 	</div>
