Added posibility to load and replay games from Hall of Fame.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -9,6 +9,7 @@
 <script	src="http://code.jquery.com/ui/1.11.0/jquery-ui.min.js"></script>
 </head>
 <body oncontextmenu="return false;">
+
 <div>
 	<h2>M I N E S W E E P E R</h2>
 	
@@ -52,7 +53,12 @@
 				</div>
 			</div>
 		</div>
-	</div>				
+		<div class="hof-footer">You can replay any of the top<br/>games by clicking on them!</div>
+	</div>		
+	
+	<div id="replay-confirm" title="Replay this game?">
+		<p>Do you want to see this fantastic game replayed in realtime?</p>
+	</div>
 	
 	<div id="footer"><br />The sourcecode can be found on <a href="https://github.com/oysteinjakobsen/minesweeper-webapp-clojure">GitHub</a></div>
 	</div>
