Upgraded to Clojure 1.6 and removed local-repo directive

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -53,7 +53,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="hof-footer">You can see a replay any of the<br/>top games by clicking on them!</div>
+		<div class="hof-footer">You can see a replay of any of the<br/>top games by clicking on them!</div>
 	</div>		
 	
 	<div id="replay-confirm" title="Replay this game?">
